Kubernetes/javacpucheck-jdk11.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: javacpucheck-jdk11
  name: javacpucheck-jdk11
spec:
  containers:
  - image: ghcr.io/mochizuki875/checkcpucore:jdk11
    name: javacpucheck
    resources:
      limits:
        memory: "1Gi"
        cpu: "1"
