Kubernetes/javacpucheck-jdk17.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: javacpucheck-jdk17
  name: javacpucheck-jdk17
spec:
  containers:
  - image: ghcr.io/mochizuki875/checkcpucore:jdk17
    name: javacpucheck
    resources:
      limits:
        memory: "1Gi"
        cpu: "1"
