Kubernetes/nginx-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:1.23
        name: nginx
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            # cpu: "0.25"
            cpu: "1"
          limits:
            memory: "256Mi"
            # cpu: "0.25"
            cpu: "1"
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: default-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        securityContext:
          privileged: true
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
          - key: nginx.conf
            path: nginx.conf
      - name: default-conf
        configMap:
          name: nginx-conf
          items:
          - key: default.conf
            path: default.conf
      # securityContext:
      #   sysctls:
      #   - name: net.ipv4.tcp_max_syn_backlog
      #     value: "10000"
      #   - name: net.core.somaxconn
      #     value: "10000"
      nodeSelector: 
        kubernetes.io/hostname: k8s-cluster1-worker01
        # kubernetes.io/hostname: k8s-cluster3-worker02
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  selector:
    app: nginx
  # type: LoadBalancer
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30482
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-ingress
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: nginx.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: nginx
#             port:
#               number: 80
